force-app/main/default/objects/Shares__c.object
<CustomObject>
    <fields>
        <fullName>Bought_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Bought Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sangam</relationshipLabel>
        <relationshipName>Sangam</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <defaultValue>&apos;ADDITIONAL / NEW SHARES&apos;</defaultValue>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <label>Member_Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SharesCount__c</fullName>
        <label>Shares Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Sangam</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ContactName__c</columns>
        <columns>Bought_Date__c</columns>
        <columns>Details__c</columns>
        <columns>Member_Number__c</columns>
        <columns>SharesCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Share Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sangam</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>