force-app/main/default/objects/Shares__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ContactName__c</columns>
    <columns>Bought_Date__c</columns>
    <columns>Details__c</columns>
    <columns>Member_Number__c</columns>
    <columns>SharesCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>